src/snapshots/tests__tests::test_fof_logic_formula-5.snap
---
created: "2019-07-19T14:49:24.740147936Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Proposition(
    LowerWord(
        "p"
    )
)
