src/snapshots/tests__tests::test_fof_logic_formula-6.snap
---
created: "2019-07-19T14:49:24.745955304Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
NonAssoc(
    LRImplies,
    Unary(
        Not,
        Proposition(
            LowerWord(
                "p"
            )
        )
    ),
    Proposition(
        LowerWord(
            "q"
        )
    )
)
