src/snapshots/tests__tests::test_fof_logic_formula.snap
---
created: "2019-07-19T14:48:20.128664647Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Unary(
    Not,
    Proposition(
        LowerWord(
            "p"
        )
    )
)
