src/snapshots/tests__tests::test_fof_quantified_formula.snap
---
created: "2019-06-11T12:13:10.555536177Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Quantified(
    Forall,
    [
        Variable(
            "X"
        )
    ],
    Boolean(
        true
    )
)
