src/snapshots/tests__tests::test_fof_term-2.snap
---
created: "2019-06-11T12:13:10.567216674Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Variable(
    Variable(
        "X"
    )
)
