src/snapshots/tests__tests::test_fof_term.snap
---
created: "2019-06-11T12:13:10.557400342Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Functor(
    LowerWord(
        "f"
    ),
    [
        Variable(
            Variable(
                "X"
            )
        )
    ]
)
