src/snapshots/tests__tests::test_fof_unary_formula.snap
---
created: "2019-06-11T12:13:10.560586546Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Unary(
    Not,
    Boolean(
        true
    )
)
